<resources>
    <string name="app_name">Health Tracker</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Invalid password</string>
    <string name="select_language">Select language</string>
    <string name="english">english</string>
    <string name="bulgarian">bulgarian</string>
    <string name="login_failed">Login failed</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="new_user">Register Here</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="old_user">Click to Sign in.</string>
    <string name="register">Register</string>
    <string name="name_placeholder">Name Placeholder</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="friends">Friends</string>
    <string name="total_steps">"Total Steps: "</string>
    <string name="achievements">Achievements</string>
    <string name="enter_your_email">Enter your e-mail</string>
    <string name="send_renewal_code">Send renewal code</string>
    <string name="statistics">Statistics</string>
    <string name="username">Username</string>
    <string name="input_code">Input the code sent to your e-mail</string>
    <string name="code_sent">Code sent!</string>
    <string name="reset_password">Reset Password</string>
    <string name="change_password_for">"Change password for "</string>
    <string name="code">00000</string>
    <string name="account">Account</string>
    <string name="steps">Steps: </string>
    <string name="calories">Calories: </string>
    <string name="daily_weight">Daily Weight: </string>
    <string name="sleep">Daily Sleep: </string>
    <string name="water">Cups of Water Drank: </string>
    <string name="searchFriend">Search friend</string>
    <string name="password_help">Password should be 6 or more symbols long</string>
    <string name="email_help">Input a real e-mail, so you can recover your password</string>
    <string name="close">CLOSE</string>
    <string name="new_friend">A user has added you to their friends list!</string>
    <string name="friend">Friend</string>
    <string name="removed">removed</string>
    <string name="missing_sensor">No sensor found</string>
    <string name="login_issue">Incorrect e-mail or password</string>
    <string name="empty_field">Empty field</string>
    <string name="added">added</string>
    <string name="no_friends">Your friends list is empty! Add friends to see them here.</string>
    <string name="running">Running</string>
    <string name="cycling">Cycling</string>
    <string name="jogging">Jogging</string>
    <string name="power_walking">Power\nWalking</string>
    <string name="no_internet">Inaccessibility to the internet</string>
    <string name="under_zero">You can\'t drink negative water</string>
    <string name="reached_water_goal">You reached your daily water goal!</string>
    <string name="background_theme">Account Background Theme</string>
    <string name="change_language_and_units">Change Language or Units</string>
    <string name="change_unit_system">Change Unit System</string>
    <string name="delete_account">Delete Account</string>
    <string name="change_goal">Change Goals</string>
    <string name="deletion_confirmation">Are you sure you want to delete your account?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="pick">Pick</string>
    <string name="start">Start</string>
    <string name="time_placeholder">00:00:00</string>
    <string name="stop">Stop</string>
    <string name="date">Date:</string>
    <string name="step_goal">Step goal:</string>
    <string name="calorie_goal">Calorie goal:</string>
    <string name="water_goal">Water goal:</string>
    <string name="sleep_goal">Sleep goal:</string>
    <string name="submit">Submit</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="challenge_duration">Challenge Duration</string>
    <string name="challenge_type">Challenge Type</string>
    <string name="mode">Mode</string>
    <string name="challenge">Challenge</string>
    <string name="invalid_duration_format">Invalid Duration Format</string>
    <string name="daily_challenges">Today\'s Challenges</string>
    <string name="type">Type</string>
    <string name="duration">Duration</string>
    <string name="by">By</string>
    <string name="status">Status</string>
    <string name="complete">complete</string>
    <string name="incomplete">incomplete</string>
    <string name="empty_challenges">No new challenges for today</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="challenges_passed">Challenges passed: </string>
    <string name="permissions_needed">The permissions requested are needed for the app to function.</string>
    <string name="kg">kg</string>
    <string name="apply">Apply changes</string>
    <string name="language">Language</string>
    <string name="units">Units</string>
    <string name="lbs">lbs</string>
    <string name="today_steps">Today\'s steps:</string>
    <string name="progress">Progress</string>
    <string name="friend_mode_on">Current friend mode on</string>
    <string name="new_friend_mode_on">New friend mode on</string>
    <string name="achieved">Achieved</string>
    <string name="unachieved">Unachieved</string>
    <string name="active_activity">There is an already active activity</string>
    <string name="empty_timer">00:00:00</string>
    <string name="ss">SS</string>
    <string name="mm">MM</string>
    <string name="hh">HH</string>
    <string name="not_a_friend">You need to be friends with a user to send out challenges</string>
    <string name="activity">ACTIVITY</string>
    <string name="local_update">No internet. Updated only locally</string>
    <string name="active">active</string>
    <string name="you_have_slept_for">You have slept for</string>
    <string name="hours">hours</string>
    <string name="requests">Requests</string>
    <string name="no_friend_requests">No friend requests</string>
    <string name="email_sent">Email sent!</string>
    <string name="email_sending_issue">There was an issue with sending the email.</string>
    <string name="settings">Settings</string>
    <string name="select_units">Select units</string>
    <string name="active_time">"Active time: "</string>
    <string name="matching_passwords">Passwords should match</string>
    <string name="register_failed">Registration failed</string>
    <string name="challenge_sent">Challenge sent!</string>
    <string name="friend_request_sent">Friend request sent!</string>
    <string name="first_achievement">Start of a journey..</string>
    <string name="second_achievement">Job change reached!</string>
    <string name="third_achievement">Class upgrade reached?!</string>
    <string name="step_wizard">All hail the step wizard 🧙‍♂️!</string>
    <string name="reach">Reach</string>
    <string name="stepss">steps</string>
    <string name="completed_activity">Completed activity</string>
    <string name="last_activity">Last activity of</string>
    <string name="with_duration">with duration of</string>
    <string name="burned">burned</string>
    <string name="calories_plain">calories</string>
    <string name="and_speed">and average speed of</string>
    <string name="ran">ran</string>
    <string name="jogged">jogged</string>
    <string name="walked">walked</string>
    <string name="cycled">cycled</string>
    <string name="you">You</string>
    <string name="for_word">for</string>
    <string name="with">with</string>
    <string name="and">and</string>
    <string name="declined">Declined</string>
    <string name="accepted">Accepted</string>
    <string name="unknown_error">Unknown error, try again</string>
    <string name="new_challenge">A user has challenged you!</string>
    <string name="max_hours">Please limit the challenge to 2 hours at max.</string>
    <string-array name="activities">
        <item>Walking</item>
        <item>Power Walking</item>
        <item>Running</item>
        <item>Cycling</item>
        <item>Hiking</item>
    </string-array>
</resources>
