<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/challenge"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_marginTop="5dp"
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/input_grey"
        app:layout_constraintTop_toBottomOf="@id/textView4" />
    <TextView
        android:id="@+id/challenge_type_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/challenge_type"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/challenge_type_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/challenge_type_spinner" />

    <Spinner
        android:id="@+id/challenge_type_spinner"
        style="@style/MySpinnerStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        android:prompt="@string/mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/challenge_duration_text"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/challenge_duration"
        app:layout_constraintBottom_toBottomOf="@+id/editTextHours"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextHours" />

    <EditText
        app:layout_constraintEnd_toStartOf="@id/editTextMinutes"
        app:layout_constraintTop_toBottomOf="@id/challenge_type_spinner"
        app:layout_constraintBottom_toTopOf="@id/submit_button"
        android:id="@+id/editTextHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:hint="HH"
        android:inputType="number" />

    <EditText
        app:layout_constraintTop_toBottomOf="@id/challenge_type_spinner"
        app:layout_constraintBottom_toTopOf="@id/submit_button"
        app:layout_constraintEnd_toStartOf="@id/editTextSeconds"
        android:id="@+id/editTextMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="mm"
        android:layout_marginEnd="5dp"
        android:inputType="number" />

    <EditText
        app:layout_constraintTop_toBottomOf="@id/challenge_type_spinner"
        app:layout_constraintBottom_toTopOf="@id/submit_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/editTextSeconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:hint="ss"
        android:inputType="number" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>