<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:orientation="vertical"
    android:paddingTop="20pt"
    tools:context=".ui.account.AccountFragment"
    >
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="80pt"
    android:src="@drawable/profile_photo_placeholder"
    />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/name_placeholder"
        android:textSize="20sp"
        android:fontFamily="sans-serif-black"

        />
    <TextView
        android:id="@+id/total_steps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_steps"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginHorizontal="20pt"
        android:layout_marginVertical="5pt"
        />

    <LinearLayout
        android:id="@+id/friends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20pt"
        android:layout_marginBottom="5pt"
        android:background="@color/light_green"
        android:padding="2pt"
        >
        <ImageView
            android:layout_width="20pt"
            android:layout_height="20pt"
            android:src="@drawable/friends"
            android:layout_marginEnd="2pt"
            />
        <TextView
            android:layout_width="wrap_content"
            android:gravity="center"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_height="match_parent"
            android:text="@string/friends"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/achievements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20pt"
        android:layout_marginBottom="5pt"
        android:background="@color/light_green"
        android:padding="2pt"
        >
        <ImageView
            android:layout_width="20pt"
            android:layout_height="20pt"
            android:src="@drawable/medal"
            android:layout_marginEnd="2pt"
            />
        <TextView
            android:layout_width="wrap_content"
            android:gravity="center"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_height="match_parent"
            android:text="@string/achievements"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/sign_out_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20pt"
        android:layout_marginBottom="5pt"
        android:background="@color/light_green"
        android:padding="2pt"
        >
        <ImageView
            android:layout_width="20pt"
            android:layout_height="20pt"
            android:src="@drawable/exit_account"
            android:layout_marginRight="2pt"
            />
        <TextView
            android:layout_width="wrap_content"
            android:gravity="center"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_height="match_parent"
            android:text="@string/action_sign_out"
            />
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>